Fixed navbar behind background

--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 body {}
+#nav-placeholder{
+    position: relative;
+    z-index: 1000;
+}
 
 img.center {
     display: block;
@@ -45,12 +49,12 @@ img.card {
     background-size: cover;
     background-position: center center;
     color: transparent;
-    height: 88%;
+    height: 88vh;
     left: 0px;
     opacity: 0;
     position: absolute;
     top: 60px;
-    width: 100%;
+    width: 100vw;
     z-index: 0;
 }
 
